--- a/site-acessivel-aula-03/site-acessivel-aula-03/index.html
+++ b/site-acessivel-aula-03/site-acessivel-aula-03/index.html
@@ -47,7 +47,7 @@
                     <img src="img/image (1).png" class="rounded-pill" alt="" width="273" height="331" loading="lazy"
                         </div>
                     <div class="col-5">
-                        <h2>O que foi a Tropicália?</h2>
+                        <h2> Por que Adotar um gato</h2>
                         <p class="p-2"> Adotar um gato pode ser uma experiência enriquecedora, pois eles são
                             companheiros fiéis e podem ajudar a combater a solidão. Além disso, cuidar de um animal
                             abandonado salva uma vida. </p>
@@ -55,7 +55,7 @@
                 </div>
         </section>
 
-        <section id="galeria">
+        <section id="galeri
             <h2 class="text-center pt-5">Galeria</h2>
             <div class="container p-3 mt-3 fundo-galeria ">
 
