--- a/site-acessivel-aula-03/site-acessivel-aula-03/index.html
+++ b/site-acessivel-aula-03/site-acessivel-aula-03/index.html
@@ -53,8 +53,8 @@
             <div class="container p-3 mt-3 fundo-galeria">
                 <div class="row justify-content-md-center">
                     <div class="col-md-4">
-                        <img src="img/lossy-page1-640px-Jorge_Ben_e_o_Trio_Mocotó_no_Teatro_da_Lagoa,_1971.tif.jpg" class="img-fluid rounded-5" alt="Imagem de Jorge Ben e o Trio Mocotó" loading="lazy">
-                    </div>
+                        <img src="img/gat
+                        div
                     <div class="col-md-4">
                         <img src="img/lossy-page1-640px-Os_Mutantes_2.tif.jpg" class="img-fluid rounded-5" alt="Imagem da banda Os Mutantes" loading="lazy">
                     </div>
