--- a/site-acessivel-aula-03/site-acessivel-aula-03/index.html
+++ b/site-acessivel-aula-03/site-acessivel-aula-03/index.html
@@ -15,7 +15,7 @@
 <body>
     <header class="p-5">
         <nav class="container d-flex justify-content-between align-items-center">
-            <img src="img/imagnsgato.jpg" class="nav-img" alt="Logo do site" loading="lazy">
+            <img src="img/images-Photoroom.png" class="nav-img" alt="Logo do site" loading="lazy">
             <ul class="nav mt-5">
                 <li class="nav-item"><a class="nav-link" href="#inicio">Início</a></li>
                 <li class="nav-item"><a class="nav-link" href="#galeria">Galeria</a></li>
