--- a/site-acessivel-aula-03/site-acessivel-aula-03/index.html
+++ b/site-acessivel-aula-03/site-acessivel-aula-03/index.html
@@ -28,11 +28,11 @@
         <section id="inicio" class="my-5">
             <div class="inicio-fundo d-flex justify-content-between align-items-center">
                 <div class="esquerda-conteudo">
-                    <h1 class="display-4 text-white fst-italic fw-bold">Boas-vindas a</h1>
+                    <h1 class="display-4 text-white fst-italic fw-bold">Adoção de gatinhos a</h1>
                     <img src="img/gatinhos.png" class="mb-3" width="563" height="278" alt="Imagem de gatinhos" loading="lazy">
                     <a href="#adoção-de-gatinhos" class="btn btn-primary btn-lg botao-inicio fw-semibold">Quero conhecer!</a>
                 </div>
-                <img src="img/transferir.jpg" alt="Imagem decorativa" loading="lazy">
+                <img src="img/images-Photoroom (1).png" alt="Imagem decorativa" loading="lazy">
             </div>
         </section>
 
