--- a/site-acessivel-aula-03/site-acessivel-aula-03/index.html
+++ b/site-acessivel-aula-03/site-acessivel-aula-03/index.html
@@ -48,7 +48,7 @@
             </div>
         </section>
 
-        <section id="galeria" class="my-5">
+        <section id="gatinhos para doação" class="my-5">
             <h2 class="text-center pt-5">Galeria</h2>
             <div class="container p-3 mt-3 fundo-galeria">
                 <div class="row justify-content-md-center">
