--- a/site-acessivel-aula-03/site-acessivel-aula-03/index.html
+++ b/site-acessivel-aula-03/site-acessivel-aula-03/index.html
@@ -56,7 +56,7 @@
                         <img src="img/gat
                         div
                     <div class="col-md-4">
-                        <img src="img/lossy-page1-640px-Os_Mutantes_2.tif.jpg" class="img-fluid rounded-5" alt="Imagem da banda Os Mutantes" loading="lazy">
+                        <img src="img/download-Photoroom (1).png" class="img-fluid rounded-5" alt="Imagem da banda Os Mutantes" loading="lazy">
                     </div>
                 </div>
                 <div class="row mt-4 justify-content-md-center">
