--- a/site-acessivel-aula-03/site-acessivel-aula-03/index.html
+++ b/site-acessivel-aula-03/site-acessivel-aula-03/index.html
@@ -61,10 +61,10 @@
                 </div>
                 <div class="row mt-4 justify-content-md-center">
                     <div class="col-md-4">
-                        <img src="img/lossy-page1-640px-Gilberto_Gil_nos_anos_1960.tif.jpg" class="img-fluid rounded-5" alt="Imagem de Gilberto Gil nos anos 1960" loading="lazy">
-                    </div>
+                        <img src="img/transferir (2).jpg" class="img-fluid rounded-5" alt="Imagem de Gilberto Gil nos anos 1960" loading="lazy">
+                    </div
                     <div class="col-md-4">
-                        <img src="img/lossy-page1-640px-Caetano_Veloso_no_III_Festival_da_Música_Popular.tif.jpg" class="img-fluid rounded-5" alt="Imagem de Caetano Veloso no III Festival da Música Popular" loading="lazy">
+                        <img src="img/images (1).jpg" class="img-fluid rounded-5" alt="Imagem de Caetano Veloso no III Festival da Música Popular" loading="lazy">
                     </div>
                 </div>
             </div>
