--- a/site-acessivel-aula-03/site-acessivel-aula-03/index.html
+++ b/site-acessivel-aula-03/site-acessivel-aula-03/index.html
@@ -64,7 +64,7 @@
                         <img src="img/transferir (2).jpg" class="img-fluid rounded-5" alt="Imagem de Gilberto Gil nos anos 1960" loading="lazy">
                     </div
                     <div class="col-md-4">
-                        <img src="img/" class="img-fluid rounded-5" alt="Imagem de Caetano Veloso no III Festival da Música Popular" loading="lazy">
+                        <img src="img/imagnsgato.jpg" class="img-fluid rounded-5" alt="Imagem de Caetano Veloso no III Festival da Música Popular" loading="lazy">
                     </div>
                 </div>
             </div>
