--- a/site-acessivel-aula-03/site-acessivel-aula-03/index.html
+++ b/site-acessivel-aula-03/site-acessivel-aula-03/index.html
@@ -32,7 +32,7 @@
                     <img src="img/gatinhos.png" class="mb-3" width="563" height="278" alt="Imagem de gatinhos" loading="lazy">
                     <a href="#adoção-de-gatinhos" class="btn btn-primary btn-lg botao-inicio fw-semibold">Quero conhecer!</a>
                 </div>
-                <img src="img/images-Photoroom (1).png" alt="Imagem decorativa" loading="lazy">
+                <img src="img/A-Bela-e-a-Fera-Beauty-The-Beast-20172.jpg" alt="Imagem decorativa" loading="lazy">
             </div>
         </section>
 
