--- a/site-acessivel-aula-03/site-acessivel-aula-03/index.html
+++ b/site-acessivel-aula-03/site-acessivel-aula-03/index.html
@@ -29,7 +29,7 @@
             <div class="inicio-fundo d-flex justify-content-between align-items-center">
                 <div class="esquerda-conteudo">
                     <h1 class="display-4 text-white fst-italic fw-bold">doação de gatinhos </h1>
-                    <img src="img/gatinhos.png" class="mb-3" width="563" height="278" alt="Imagem de gatinhos" loading="lazy">
+                    <img src="img/images.jpeg" class="mb-3" width="563" height="278" alt="Imagem de gatinhos" loading="lazy">
                     <a href="#adoção-de-gatinhos" class="btn btn-primary btn-lg botao-inicio fw-semibold">Quero conhecer!</a>
                 </div>
                 <img src="img/A-Bela-e-a-Fera-Beauty-The-Beast-20172.jpg" alt="Imagem decorativa" loading="lazy">
